support  code action

--- a/src/demo.html
+++ b/src/demo.html
@@ -21,8 +21,8 @@
       <input
         type="radio"
         name="eslint_input_tabs"
-        class="ep-deps-tab"
-        data-radio-name="deps"
+        class="ep-package-json-tab"
+        data-radio-name="package-json"
       />package.json
     </label>
   </div>
@@ -35,12 +35,12 @@
       <label>› .eslintrc.json </label>
       <div class="ep-config-monaco"></div>
     </div>
-    <div class="ep-deps">
+    <div class="ep-package-json">
       <label>› package.json</label>
-      <div class="ep-deps-monaco"></div>
-      <div class="ep-deps-installed">
+      <div class="ep-package-json-monaco"></div>
+      <div class="ep-package-json-installed">
         <label>Installed:</label>
-        <ul class="ep-deps-versions"></ul>
+        <ul class="ep-package-json-versions"></ul>
       </div>
     </div>
   </div>
