--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ESLint Online Playground</title>
+    <meta
+      name="description"
+      content="This ESLint online playground will let you check out the behavior of your favorite ESLint plugins."
+    />
     <script>
       (() => {
         const theme =
